<resources>
    <string name="app_name">GunnarDulleCS360Project</string>
    <string name="calendar_image">Calendar Image</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="event_tracker">Event Tracker</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_desc">Event Description</string>
    <string name="button_add">Add</string>
    <string name="button_text_message">Text Reminder</string>
    <string name="button_delete">Delete</string>
    <string name="delete_event_cap">Delete Event</string>
    <string name="add_event_cap">Add Event</string>
    <string name="text_notification_cap">Text Notification</string>
    <string name="add_event">Add Event</string>
    <string name="description">Description</string>
    <string name="event_description">Event Description</string>
    <string name="hh_mm_am_pm">HH:MM AM/PM</string>
    <string name="event_time_desc">Event Time</string>
    <string name="new_event">New Event</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="event_date_desc">Event Date</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="new_username">Username</string>
    <string name="new_password">Enter Password</string>
    <string name="new_password_label">Password</string>
    <string name="register">Register</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="enter_username">Enter Username</string>
    <string name="forgot_password_Title">Forgot Password</string>
    <string name="forgot_password_directions">Enter Information Below</string>
    <string name="forgot_pass_name_edittext">Enter Username</string>
    <string name="forgot_pass_phone_edittext">Enter Phone Number</string>
    <string name="forgot_pass_pass_hint">Password Displays Here</string>
    <string name="forgot_pass_cancel_button">CANCEL</string>
    <string name="forgot_pass_retrieve_button">RETRIEVE PASSWORD</string>
    <string name="new_user_cancel">Cancel</string>
    <string name="event_template_edit_button">Event Edit Button</string>
    <string name="event_template_date">Event Date</string>
    <string name="event_template_time">Event Time</string>
    <string name="event_template_description">Event Description</string>
    <string name="event_template_delete">Event Delete</string>
    <string name="edit_event_title">Edit Event</string>
    <string name="edit_event_date_hint">Enter Date</string>
    <string name="edit_event_time_hint">Enter Time</string>
    <string name="edit_event_desc_hint">Enter Description</string>
    <string name="edit_event_cancel_button">CANCEL</string>
    <string name="edit_event_confirm_button">CONFIRM</string>
    <string name="alert_delete_title">Delete All Events</string>
    <string name="alert_delete_message">Are you sure you want to delete all events in database?</string>
    <string name="alert_delete_dialog_yes_button">Yes</string>
    <string name="alert_delete_dialog_no_button">No</string>
    <string name="alert_sms_title">App SMS Permission Needed</string>
    <string name="alert_sms_message">The app SMS feature requires permission to notify of events.</string>
    <string name="alert_sms_enable_button">Enable</string>
    <string name="alert_sms_disable_button">Disable</string>
    <string name="cancelAddEventButton">Cancel</string>
</resources>