<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <LinearLayout
        android:id="@+id/listHeaderLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/eventEditCol"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/event_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/event_time"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/event_desc"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventDelCol"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textAlignment="center" />
    </LinearLayout>

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="418dp"
        android:layout_height="551dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@id/footerButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listHeaderLinearLayout" />

    <LinearLayout
        android:id="@+id/footerButtonsLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventListView"
        app:layout_constraintBottom_toTopOf="@id/footerLabelsLayout">


        <ImageButton
            android:id="@+id/buttonDeleteEvent"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#474747"
            android:contentDescription="@string/button_delete"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <ImageButton
            android:id="@+id/buttonAddEvent"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#474747"
            android:contentDescription="@string/button_add"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/buttonTextMessage"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#474747"
            android:contentDescription="@string/button_text_message"
            app:srcCompat="@android:drawable/stat_notify_chat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footerLabelsLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footerButtonsLayout">

        <TextView
            android:id="@+id/deleteEventCaption"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_event_cap"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/addEventCaption"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_event_cap"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textNotificationCaption"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_notification_cap"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>