<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/field_rounded_blue_bg"
    android:id="@+id/activity_forgotpass_popup"
    android:alpha="0.95"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewForgotTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/forgot_password_Title"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:id="@+id/textViewForgotInfo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="normal"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/forgot_password_directions"
        android:gravity="center"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotTitle"
        app:layout_constraintHorizontal_bias="0.494"/>

    <EditText android:layout_height="35dp"
        android:layout_width="250dp"
        android:id="@+id/editTextForgotUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotInfo2"
        app:layout_constraintHorizontal_bias="0.497"
        tools:ignore="TextContrastCheck"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:hint="@string/forgot_pass_name_edittext"
        android:ems="12"
        android:backgroundTint="@color/white"/>

    <EditText
        android:layout_height="35dp"
        android:layout_width="250dp"
        android:id="@+id/editTextForgotPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextForgotUserName"
        app:layout_constraintHorizontal_bias="0.497"
        tools:ignore="TextContrastCheck"
        android:inputType="phone"
        android:importantForAutofill="no"
        android:hint="@string/forgot_pass_phone_edittext"
        android:ems="12"
        android:backgroundTint="@color/white"/>

    <TextView
        android:layout_height="35dp"
        android:layout_width="250dp"
        android:id="@+id/textViewPassDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextForgotPhone"
        app:layout_constraintHorizontal_bias="0.494"
        tools:ignore="TextContrastCheck"
        android:hint="@string/forgot_pass_pass_hint"
        android:ems="12"
        android:backgroundTint="@color/white"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="85dp"
        android:id="@+id/forgotCancelButton"
        app:layout_constraintStart_toStartOf="@+id/textViewPassDisplay"
        android:textSize="11sp"
        android:text="@string/forgot_pass_cancel_button"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassDisplay"
        app:backgroundTint="@color/red"/>

    <Button
        android:layout_height="45dp"
        android:layout_width="105dp"
        android:id="@+id/forgotRetrieveButton"
        app:layout_constraintEnd_toEndOf="@+id/textViewPassDisplay"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:text="@string/forgot_pass_retrieve_button"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassDisplay"
        app:backgroundTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>