<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_tracker_template"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_height="50dp"
        android:layout_width="0dp"
        android:id="@+id/headerLinearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

    <ImageButton
        android:layout_height="match_parent"
        android:layout_width="30dp"
        android:id="@+id/buttonEditEvent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:cropToPadding="false"
        android:contentDescription="@string/event_template_edit_button"
        android:background="#474747"
        android:adjustViewBounds="false"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="50dp"
        android:id="@+id/textViewEventDate"
        android:background="#474747"
        tools:ignore="TextContrastCheck"
        android:textStyle="normal"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:padding="5dp"
        android:hint="@string/event_template_date"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="1"/>

    <TextView android:layout_height="match_parent"
        android:layout_width="30dp"
        android:id="@+id/textViewEventTime"
        android:background="#474747"
        tools:ignore="TextContrastCheck"
        android:textStyle="normal"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:padding="5dp"
        android:hint="@string/event_template_time"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="1"/>

    <TextView android:layout_height="match_parent"
        android:layout_width="130dp"
        android:id="@+id/textViewEventDescription"
        android:background="#474747"
        tools:ignore="TextContrastCheck"
        android:textStyle="normal"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:hint="@string/event_template_description"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="1"/>

    <ImageButton
        android:layout_height="match_parent"
        android:layout_width="30dp"
        android:id="@+id/buttonDeleteEvent"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:cropToPadding="true"
        android:contentDescription="@string/event_template_delete"
        android:background="#474747"
        android:adjustViewBounds="false"
        android:layout_weight="1"/>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>