<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/field_rounded_blue_bg"
    android:id="@+id/activity_editevent_popup"
    android:alpha="0.95"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textViewEditEventText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/edit_event_title"
        android:layout_marginTop="12dp"/>

    <EditText
        android:layout_height="35dp"
        android:layout_width="250dp"
        android:id="@+id/editTextEditDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        tools:ignore="TextContrastCheck"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditEventText"
        android:padding="5dp"
        android:inputType="date"
        android:importantForAutofill="no"
        android:hint="@string/edit_event_date_hint"
        android:ems="10"
        android:backgroundTint="@color/white"/>

    <EditText
        android:layout_height="35dp"
        android:layout_width="250dp"
        android:id="@+id/editTextEditTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        tools:ignore="TextContrastCheck"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditDate"
        android:padding="5dp"
        android:inputType="time"
        android:importantForAutofill="no"
        android:hint="@string/edit_event_time_hint"
        android:ems="10"
        android:backgroundTint="@color/white"/>

    <EditText
        android:layout_height="100dp"
        android:layout_width="250dp"
        android:id="@+id/editTextEditDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        tools:ignore="TextContrastCheck"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditTime"
        android:padding="5dp"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        android:hint="@string/edit_event_desc_hint"
        android:ems="10"
        android:backgroundTint="@color/white"
        android:gravity="start|top"/>

    <Button
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:id="@+id/editEventCancelButton"
        app:layout_constraintStart_toStartOf="@+id/editTextEditDescription"
        android:textSize="12sp"
        android:text="@string/edit_event_cancel_button"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditDescription"
        app:backgroundTint="@color/red"/>

    <Button
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:id="@+id/editEventConfirmButton"
        app:layout_constraintEnd_toEndOf="@+id/editTextEditDescription"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/edit_event_confirm_button"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditDescription"
        app:backgroundTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>